# mi-motor-rust

./: .gitignore  Cargo.toml  README.md  README_CCRL.md  mover_fen_rust.sh
nn_weights/: README.md
src/: bitboard.rs  board.rs  eval.rs  main.rs  movegen.rs  neural.rs  perft.rs  polyglot.rs  polyglot_random.rs  search.rs  see.rs  syzygy.rs  types.rs  zobrist.rs
