[package]
name = "mi-motor-rust"
version = "0.8.0"
edition = "2024"
description = "Motor de ajedrez UCI de Tavito, version reparada"

[dependencies]
rand = "0.10.2"
shakmaty = "0.30.1"
shakmaty-syzygy = "0.28.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
